
2009-05-19:
Hide ssctrl1.html extra buttons, added sample minimal Sum and Sum2 Button code.
Updated EditorAddToInput to erase any pointing partial expressions.

2009-05-21:
Changed ctrl-v to paste in upper left if has range.

2009-05-22:
Changed dragging vertical thumb to display part of each proposed new top row. New constants, etc.

2009-05-28:
Wrote ConvertCSV routine in Perl in socialcalcserverX.pl.

2009-05-31:
Moved sum button into socialcalcspreadsheetcontrol.js as additional formula bar button.

2009-06-01:
Made OLPC version's graphing more modular, and save.
Fixed bug in sort settings save.
Added SocialCalc.Callbacks.NormalizeSheetName to socialcalc-3.js and formula1.js.


TO DO:


Handle unknown function better - should be error message but propogate OK.
Handle bad settings
Make sure insert/delete row/col and move handle name coord changing undo.
Need some way to abort recalc -- like pressing Esc?


Limit undo size?
1 row scroll of high cells doesn't update row height values or something -
 scroll in Merges and Scrolling when 2 panes -- may be dragging when scrolled
 doesn't know trying to set too far: check test
Bug in SocialCalc.pm: adjust_formula_coords refs to deleted cells -- doesn't handle multiple
Bug in Sheet.pm: test_criteria tests "value" instead of "type" for left error
Check SheetFunctions.pm: Dseries with criteria of "0" -- checks for blank as !criteria, not length
 Also, see double testcol setting.
INDEX function (and range return from evaluate polish) does not handle other sheets.
 Make DecodeRangeParts get that stuff to make it easy?
Bug in SheetFunctions.pm: StringFunctions error doesn't return right away
 RIGHT has -1 args?
 InterestFunctions: should be -3 args?
 IRR check for values?
Bug in Sheet.pm: evaluate_parsed_formula return of range doesn't swap sheetname!coord
Sheet.ResetSheet doesn't seem to work well -- it does not recalc or redisplay well afterward
